cmake_minimum_required(VERSION 3.10)
project(mystl)

set(CMAKE_CXX_STANDARD 14)

include_directories(deque)
include_directories(deque/data)
include_directories(map)
include_directories(map/data)
include_directories(map/data/five.memcheck)
include_directories(vector)
include_directories(vector/data/1000/data)

add_executable(mystl
        deque/data/five/answer.txt
        deque/data/five/code.cpp
        deque/data/four/answer.txt
        deque/data/four/code.cpp
        deque/data/four.memcheck/answer.txt
        deque/data/four.memcheck/code.cpp
        deque/data/one/answer.txt
        deque/data/one/code.cpp
        deque/data/one.memcheck/answer.txt
        deque/data/one.memcheck/code.cpp
        deque/data/three/answer.txt
        deque/data/three/code.cpp
        deque/data/three.memcheck/answer.txt
        deque/data/three.memcheck/code.cpp
        deque/data/two/answer.txt
        deque/data/two/code.cpp
        deque/data/two.memcheck/answer.txt
        deque/data/two.memcheck/code.cpp
        deque/data/class-bint.hpp
        deque/data/class-integer.hpp
        deque/data/class-matrix.hpp
        deque/CMakeLists.txt
        deque/deque.hpp
        deque/exceptions.hpp
        deque/main.cpp
        deque/utility.hpp
        map/data/five/answer.txt
        map/data/five/code.cpp
        map/data/five.memcheck/answer.txt
        map/data/five.memcheck/code
        map/data/five.memcheck/code.cpp
        map/data/five.memcheck/exceptions.hpp
        map/data/five.memcheck/map.hpp
        map/data/five.memcheck/utility.hpp
        map/data/four/answer.txt
        map/data/four/code.cpp
        map/data/four.memcheck/answer.txt
        map/data/four.memcheck/code
        map/data/four.memcheck/code.cpp
        map/data/one/answer.txt
        map/data/one/code.cpp
        map/data/one.memcheck/answer.txt
        map/data/one.memcheck/code.cpp
        map/data/six/answer.txt
        map/data/six/code.cpp
        map/data/six.memcheck/answer.txt
        map/data/six.memcheck/code.cpp
        map/data/three/answer.txt
        map/data/three/code.cpp
        map/data/three.memcheck/answer.txt
        map/data/three.memcheck/code.cpp
        map/data/two/answer.txt
        map/data/two/code.cpp
        map/data/two.memcheck/answer.txt
        map/data/two.memcheck/code.cpp
        map/data/class-bint.hpp
        map/data/class-integer.hpp
        map/data/class-matrix.hpp
        map/CMakeLists.txt
        map/exceptions.hpp
        map/map.hpp
        map/test.cpp
        map/utility.hpp
        vector/data/1000/data/one/answer.txt
        vector/data/1000/data/one/code.cpp
        vector/data/1000/data/one.memcheck/answer.txt
        vector/data/1000/data/one.memcheck/code.cpp
        vector/data/1000/data/three/answer.txt
        vector/data/1000/data/three/code.cpp
        vector/data/1000/data/three.memcheck/answer.txt
        vector/data/1000/data/three.memcheck/code.cpp
        vector/data/1000/data/two/answer.txt
        vector/data/1000/data/two/code.cpp
        vector/data/1000/data/two.memcheck/answer.txt
        vector/data/1000/data/two.memcheck/code.cpp
        vector/data/1000/data/class-bint.hpp
        vector/data/1000/data/class-integer.hpp
        vector/data/1000/data/class-matrix.hpp
        vector/CMakeLists.txt
        vector/exceptions.hpp
        vector/main.cpp
        vector/utility.hpp
        vector/vector.hpp)
